# proyecto-ll-programacion-ll

./: CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnemyTypes.h  EventLog.cpp  EventLog.h  Hero.cpp  Hero.h  IEntity.h  ISimulationObserver.h  Item.h  ItemTypes.h  README.md  ReportGenerator.cpp  ReportGenerator.h  Room.cpp  Room.h  Simulation.cpp  Simulation.h  World.cpp  World.h  WorldLoader.cpp  WorldLoader.h  hero  items  main.cpp
data/: enemies  enemies.txt  hero.txt  items.txt  world  world.txt
src/: main.cpp
src/entities/: Character.h  Enemy.cpp  Enemy.h  EnemyTypes.h  Hero.cpp  Hero.h  IEntity.h
src/items/: Item.h  ItemTypes.h
src/output/: EventLog.cpp  EventLog.h  ReportGenerator.cpp  ReportGenerator.h
src/simulation/: EnemyFactory.cpp  EnemyFactory.h  ISimulationObserver.h  Simulation.cpp  Simulation.h
src/world/: Room.cpp  Room.h  World.cpp  World.h  WorldLoader.cpp  WorldLoader.h
